syntax = "proto3";

package question;

service QuestionService {
    rpc SearchQuestions (SearchRequest) returns (SearchResponse);
    rpc GetSuggestions (SearchRequest) returns (SuggestionsResponse);
}

message SearchRequest {
    string query = 1;
    int32 page = 2;
    int32 limit = 3;
}

message Question {
    string id = 1;
    string title = 2;
    string type = 3;
}

message SearchResponse {
    repeated Question questions = 1;
    int32 total = 2;
}

message SuggestionsResponse {
    repeated string suggestions = 1;
}
